--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,9 @@
 backend:
   name: git-gateway
   branch: master
+  accept_roles:
+    - dm
+    - player
 
 media_folder: static/img
 public_folder: /img
